# bricklib

./: .gitignore  README.md  pyproject.toml
bricklib/: __init__.py  mixins.py  types.py
tests/: test_attachments.py
